# alternative-assets-fullstack

./: README.md
alternative-assets-backend/: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  settings.toml
alternative-assets-backend/src/: main.py
alternative-assets-backend/src/api/responses/: investors.py
alternative-assets-backend/src/database/: assets_under_management.sqlite  connection.py
alternative-assets-backend/src/database/creation/: README.md  assets_under_management.sql  create_assets_under_management_db.py  investor_codes.csv
alternative-assets-backend/src/model/: assets_under_management.py
alternative-assets-backend/src/services/: investor_service.py
alternative-assets-backend/src/utilities/: epoch.py
alternative-assets-backend/tests/unit/database/: test_connection.py
alternative-assets-backend/tests/unit/database/creation/: test_create_assets_under_management_db.py
alternative-assets-backend/tests/unit/services/: test_investor_service.py
alternative-assets-backend/tests/unit/utilities/: test_epoch.py
alternative-assets-frontend/: .eslintrc.json  README.md  cypress.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
alternative-assets-frontend/cypress/e2e/: AssetSummaryGrid.cy.ts  InvestorAssetSummaries.cy.ts  InvestorCommitments.cy.ts  InvestorTable.cy.ts
alternative-assets-frontend/src/app/: layout.tsx  page.module.css  page.tsx
alternative-assets-frontend/src/app/components/: InvestorAssetSummaries.tsx  InvestorCommitments.tsx  InvestorsTable.tsx
rapid-api/: alternative_assets_api.paw
(+8 files in other folders)
