[tool.poetry]
name = "alternative-assets-backend"
version = "0.1.0"
description = ""
authors = ["Malcolm Barclay <malcolm@mbarclay.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
