[tool.poetry]
name = "alternative-assets-backend"
version = "0.1.0"
description = ""
authors = ["Malcolm Barclay <malcolm@mbarclay.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
dynaconf = "^3.2.6"
pandas = "^2.2.2"
pycountry = "^24.6.1"
uvicorn = "^0.30.6"
fastapi = "^0.112.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
